--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -21,3 +21,18 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+#new
+# Node modules
+frontend/node_modules/
+backend/node_modules/
+dashboard/node_modules/
+
+# Environment files
+*.env
+
+# Build folders
+frontend/build/
+dashboard/build/
+
+# VS Code settings
+.vscode/
